--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./src/css/style.css">
     <title>Luxtrader</title>
 </head>
 
@@ -35,9 +35,9 @@
                         <a href="#" class="person"><img src="./img/icons/user.png" alt=""></a>
                         <div class="persons_settings">
                             <ul class="persons_settings_list">
-                                <li><a href="#"> Войти</a></li>
-                                <li><a href="#"> Мои ставки</a></li>
-                                <li><a href="#"> Мои лоты</a></li>
+                                <li><a href="#">Войти</a></li>
+                                <li><a href="#">Мои ставки</a></li>
+                                <li><a href="#">Мои лоты</a></li>
                             </ul>
                         </div>
                     </div>
@@ -189,6 +189,43 @@
                             <button class="lots_item-btn main_btn">ПОДНЯТЬ СТАВКУ</button>
                         </div>
                         <div class="lots_item lots_slider_item " id="watch2">
+                            <div class="lot_image ibg">
+                                <img src="./img/lots/03.jpg" alt="">
+                                <div class="lots_timer">
+                                    <img src="./img/icons/timer.svg" alt="">
+                                    <div class="lots_timer-text">
+                                        <span id="days">32</span>:
+                                        <span id="hours">32</span>:
+                                        <span id="minutes">25</span>:
+                                        <span id="seconds">25</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="lots_item_title">Rolex Paul Newman Daytona</div>
+                            <div class="lots_money">
+                                <div class="lots_money-top">
+                                    <div class="money-top_icon">
+                                        <img src="./img/icons/eye.png" alt="">
+                                    </div>
+                                    <div class="money-top_text">Текущая ставка</div>
+                                    <div class="money-top_icon money-top_icon-2">
+                                        <img src="./img/icons/hand.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="lots_money-bot">
+                                    <div class="money-bot_little">
+                                        <div class="money-bot_little_text">11</div>
+                                    </div>
+                                    <div class="money-bot_big">3 245 000</div>
+                                    <div class="money-bot_little">
+                                        <div class="money-bot_little_text">5</div>
+                                    </div>
+                                </div>
+                                <div class="lots_money_rubles">P</div>
+                            </div>
+                            <button class="lots_item-btn main_btn">ПОДНЯТЬ СТАВКУ</button>
+                        </div>
+                        <div class="lots_item lots_slider_item " id="watch3">
                             <div class="lot_image ibg">
                                 <img src="./img/lots/03.jpg" alt="">
                                 <div class="lots_timer">
